--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "/Users/jimmygam/.local/share/virtualenvs/air-bnb-dvk1n1mg/bin/python"
+"python.pythonPath": "/Users/jimmygam/.local/share/virtualenvs/air-bnb-dvk1n1mg/bin/python",
+"python.linting.pylintEnabled": false,
+"python.linting.flake8Enabled": true,
+"python.linting.enabled": true
 }
