many apps created and users app done with models

--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,8 @@ verify_ssl = true
 
 [dev-packages]
 flake8 = "*"
+autopep8 = "*"
+black = "*"
 
 [requires]
 python_version = "3.7"
@@ -14,3 +16,4 @@ allow_prereleases = true
 
 [packages]
 django = "==2.2.5"
+pillow = "*"
