photo addition from user admin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-"python.pythonPath": "/Users/jeonghan.gam/.local/share/virtualenvs/air-bnb-LzwFhdon/bin/python",
+"python.pythonPath": "/Users/jimmygam/.local/share/virtualenvs/air-bnb-dvk1n1mg/bin/python",
 "python.linting.pylintEnabled": false,
 "python.linting.flake8Enabled": true,
 "python.linting.enabled": true
